[project]
name = "quant-smooth-ana"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.28.0",
    "datasets>=2.18.0",
    "matplotlib>=3.7.0",
    "numpy>=1.23.0",
    "pyyaml>=6.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "compressed-tensors",
]

[tool.uv.sources]
compressed-tensors = { git = "git+https://git@github.com/zhanglei1172/compressed-tensors.git", rev = "lz_exp" }
